--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "bootstrap": "^4.6.0",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
+    "popper": "^1.0.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-yandex-metrika": "^1.8.3",
     "vuelidate": "^0.7.6",
     "vuex": "^3.4.0"
   },
