--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "popper": "^1.0.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0",
     "vue-yandex-metrika": "^1.8.3",
     "vuelidate": "^0.7.6",
